k8s/pod-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: forgerock
  labels:
    appname: forgerock
spec:
  containers:
  - name: forgerock
    image: geoj/forgerock:k8s
    imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: forgerock-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    appname: forgerock
  ports:
  - protocol: TCP
    port: 3000
