k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgerock-ingress
spec:
  rules:
    - host: forgerock.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgerock-service
                port:
                  number: 3000
